mozartpay/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mozartpay
  labels:
    name: mozartpay
    app.kubernetes.io/name: mozartpay
    app.kubernetes.io/component: infrastructure
